# suggest-five

./: .gitignore  README.md  setup.cfg  tox.ini
.github/workflows/: main.yml
src/suggest_five/: __main__.py  guess_results.py  io.py  naive_guesser.py  ui.py  util.py
tests/integration/: example_answers.txt  test_cli.py  test_integration.py
tests/unit/: test_io.py  test_naive_guesser.py  test_ui.py  test_utils.py
