[metadata]
name = suggest-five
version = attr: suggest_five.__version__
description = Suggest answers for a popular five-letter word game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thebrid/suggest-five
author = David Bridson
author_email = david@bridson.co.uk
license = GPL3
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Puzzle Games
    Topic :: Internet
download_url = https://github.com/thebrid/suggest-five/archive/main.zip
project_urls =
    Source=https://github.com/thebrid/suggest-five
    Tracker=https://github.com/thebrid/suggest-five/issues

[options]
packages = find:
python_requires = >=3.10
package_dir =
    =src
zip_safe = True

[options.entry_points]
console_scripts =
    suggest_five = suggest_five.__main__:suggest_five
    suggest_five_performance = suggest_five.__main__:suggest_five_performance
    
[options.packages.find]
where = src

